--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </section>
     </div>
     <footer class="site-footer">
-        <p>Made by <a href="https://www.instagram.com/kito_4756/">Kunal Yadav</a></p>
+        <p>Made by <a href="https://www.instagram.com/kito_4756/" target="_blank">Kunal Yadav</a></p>
     </footer>
     <script src="anime.js"></script>
 </body>
